common/script/e2e-in-component-repo/gke_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vsystem
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-buffer-size: 16k
spec:
  rules:
  - host: gcloud_vsystem_domain_name
    http:
      paths:
      - backend:
          serviceName: vsystem-ext
          servicePort: 8797
        path: /*
  tls:
  - hosts:
    - gcloud_vsystem_domain_name
    secretName: vsystem-tls-certs
